--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Noto+Sans+JP:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shippori+Mincho+B1&display=swap"
       rel="stylesheet">
-    <title>Vite + React + TS</title>
+    <title>Atelier Rin</title>
   </head>
   <body>
     <div id="root"></div>
